public/scss/style.scss
/* ... */
.member-key-status {
    flex-grow: 1;
}

input:invalid {
    border-color: red;
}

.statistics-member-stats {
    margin-bottom: 30px;
    margin-top: 30px;
}

.statistics-member-stats-box {
    padding: 8px;
    background: #4699be;
    border-radius: 5px;
    color: white;
}

.statistics-member-stats-type {
    width: 240px;
    margin-right: 20px;
    font-weight: bold;
}

.statistics-member-stats-value {
}

.statistics-member-stats-row {
    display: flex;
    flex-direction: row;
}

$palette1: #5c2849;
$palette2: #a73e5c;
$palette3: #ec4863;
$palette4: #ff733f;
$palette5: #a8c545;
$palette-green: $palette5;
$palette-red: $palette4;

.quiz-background {
    width: 100%;
    min-height: 100%;
    background-color: $palette1;
}

#content.quizpage {
    margin-top: 40px;
    background-color: white;
    box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
    border-radius: 10px;
    padding: 50px;

    @media screen and (max-width: 900px) {
        padding: 20px;
    }

    justify-content: start;
    flex-direction: column;

    .quiz-embed {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin-top: 15px;
        margin-bottom: 15px;

        iframe {
            max-width: 100%;
        }
    }

    a {
        color: #d45277;
    }

    .uk-button {
        color: white;
    }

    &.quiz-complete {
        background-color: $palette5;
        color: white;
        justify-content: center;
        text-align: center;

        h2 {
            font-family: "Bitter";
            color: white;
        }
    }

    h1 {
        font-family: "Bitter", serif;
        margin-top: 0px;
        padding-top: 0px;
        font-size: 30pt;
        text-align: center;
    }

    .question-text {
        font-style: italic;
    }

    p {
        margin-bottom: 5px;
    }

    .quiz-button-start {
        align-self: center;
        width: 200px;
    }

    .quiz-login {
        align-self: center;

        a {
            color: $palette2;
        }
    }

    ul {
        margin-top: 8px;
        margin-bottom: 8px;
        padding: 0px;
    }

    .question-options li {
        padding: 8px;
        list-style: none;
        border-radius: 5px;
        border: 1px solid $palette2;
        padding-left: 10px;
        // transition: 200ms background-color;
        transition: 200ms box-shadow;
        color: black;
        box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
        margin: 12px;
        cursor: pointer;

        // Prevents text selection.
        // This helps in particular on mobile devices where clicking a button might otherwise select its text
        user-select: none;

        &:hover {
            // background-color: #37d;
            // color: white;
            box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.2);
        }

        &.question-option-correct {
            color: white;
            border: 1px solid darken($palette-green, 0.1);
            background: $palette-green;
        }

        &.question-option-incorrect:not(.question-option-selected) {
            opacity: 0.5;
        }

        &.question-option-selected.question-option-correct {
            color: white;
            border: 1px solid darken($palette-green, 0.1);
            background: $palette-green;
        }

        &.question-option-selected.question-option-incorrect {
            color: white;
            border: 1px solid darken($palette-red, 0.1);
            background: $palette-red;
        }
    }

    .question-answer-info {
        // padding: 8px;
        // border-radius: 5px;
        // color: white;
        margin: 12px;
        // box-shadow: 0px 0px 3px 0px rgba(0,0,0,0.2);
    }

    .question-answer-info-incorrect {
        // border: 1px solid darken($palette-red, 0.1);
        // background: $palette-red;
        color: $palette-red;
    }

    .question-answer-info-correct {
        // border: 1px solid darken($palette-green, 0.1);
        // background: $palette-green;
        color: $palette-green;
    }

    .question-answer-description {
        margin: 5px;
        margin-bottom: 15px;
        font-style: italic;
    }

    .uk-button-primary {
        margin-top: 20px;
        background-color: $palette2;
        box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.2);
        transition: 200ms box-shadow;

        &:hover {
            box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.2);
        }
    }

    @media screen and (max-width: 900px) {
        margin: 0px;
        border-radius: 0px;
        background-color: $palette1;
        color: white;

        h1 {
            font-size: 20pt;
            color: white;
        }

        h2 {
            font-size: 20pt;
            color: white;
        }

        .question-answer-info {
            text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.3);
        }

        .question-options li {
            background-color: $palette2;
            color: white;
            border: 1px solid rgba(0, 0, 0, 0);

            // Stronger shadows
            box-shadow: 0px 0px 3px 0px rgba(0, 0, 0, 0.3);

            &:hover {
                box-shadow: 0px 3px 8px 0px rgba(0, 0, 0, 0.3);
            }
        }
    }

    .quiz-more-questions {
        margin-top: 60px;

        ul {
            list-style: none;
            margin-top: 30px;
            display: flex;
            flex-direction: row;
            justify-content: center;
        }

        li {
            border: none;
            box-shadow: none;
            margin: 20px;
        }

        img {
            width: 64px;
            filter: drop-shadow(0px 0px 6px rgba(0, 0, 0, 0.3));
            transition: 200ms filter;

            &:hover {
                filter: drop-shadow(0px 3px 10px rgba(0, 0, 0, 0.4));
            }
        }

        @media screen and (max-width: 900px) {
            margin-top: 30px;

            ul {
                margin-top: 20px;
            }
        }
    }
}
/* ... */

